### Design Linux and link all page Fisnishgit add .git add .git add .!

--- a/portfolio/c.html
+++ b/portfolio/c.html
@@ -79,6 +79,12 @@
                 <li>
                     <div class="sidebar-link">
                         <a href="">課堂實作</a>
+                        <div class="sibebar-child-container">
+                            <a href="#" class="sibebar-child" onclick="demo(1)">Card</a>
+                            <a href="#" class="sibebar-child" onclick="demo(2)">Blog</a>
+                            <a href="#" class="sibebar-child" onclick="demo(3)">Mutipage</a>
+                            <a href="#" class="sibebar-child" onclick="demo(4)">Resume</a>
+                        </div>
                         <i class="fa-solid fa-plus"></i>
                     </div>
                     <div class="underline"></div>
@@ -86,6 +92,11 @@
                 <li>
                     <div class="sidebar-link">
                         <a href="">作品集 </a>
+                        <div class="sibebar-child-container">
+                            <a href="./c.html" class="sibebar-child">C</a>
+                            <a href="./computer.html" class="sibebar-child">計概</a>
+                            <a href="./linux.html" class="sibebar-child">Linux</a>
+                        </div>
                         <i class="fa-solid fa-plus"></i>
                     </div>
 
@@ -109,7 +120,7 @@
     <!-- end of sidebar -->
 
     <!-- portfolio -->
-    <section class="portfolio_c content-section" id="portfolio_c">
+    <section class="portfolio_c content-section" id="index">
         <header>
             <h2>計算機程式語言</h2>
         </header>
