--- a/resume/resume.html
+++ b/resume/resume.html
@@ -79,15 +79,27 @@
                 </li>
                 <li>
                     <div class="sidebar-link">
-                        <a href="./portfolio/c.html">課堂實作</a>
+                        <a href="../portfolio/c.html">課堂實作</a>
                         <i class="fa-solid fa-plus"></i>
+                        <div class="sibebar-child-container">
+                            <a href="#" class="sibebar-child" onclick="demo(1)">Card</a>
+                            <a href="#" class="sibebar-child" onclick="demo(2)">Blog</a>
+                            <a href="#" class="sibebar-child" onclick="demo(3)">Mutipage</a>
+                            <a href="#" class="sibebar-child" onclick="demo(4)">Resume</a>
+                        </div>
                     </div>
                     <div class="underline"></div>
                 </li>
                 <li>
                     <div class="sidebar-link">
-                        <a href="">作品集  </a>
+                        <a href="">作品集</a>
                         <i class="fa-solid fa-plus"></i>
+                        <div class="sibebar-child-container">
+                            <a href="../portfolio/c.html" class="sibebar-child">C</a>
+                            <a href="../portfolio/computer.html" class="sibebar-child">計概</a>
+                            <a href="../portfolio/linux.html" class="sibebar-child">Linux</a>
+                        </div>
+                        
                     </div>
                     
                     <div class="underline"></div>
